# sdme

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs  verify-kube-20260312-131229.md  verify-kube-stack-20260312-131218.md  verify-wordpress-pod-20260312-125353.md
.github/workflows/: release.yml
docs/: architecture.md  hacks.md  kube.md  motivation.md  oci.md  sdme.1  security.md  story.md  syseng.md  test_results.md  tests.md  tutorial-pods.md  usage.md
site/content/docs/: _index.md  architecture.md  security.md
site/content/tutorial/: bind-mounts-volumes.md  building-rootfs.md  kubernetes-pods.md  networking.md  oci-apps.md  oci-volumes.md  picoclaw.md  pod-networking.md
site/static/js/: downloads.js
site/templates/: doc-section.html  doc.html  index.html
src/: build.rs  cli.rs  config.rs  containers.rs  copy.rs  elf.rs  export.rs  import.rs  kube.rs  kube_secret.rs  lib.rs  lock.rs  main.rs  mounts.rs  names.rs  network.rs  pod.rs  rootfs.rs  security.rs  submounts.rs  system_check.rs  systemd.rs  txn.rs
src/containers/: exec.rs  list.rs  mod.rs
src/devfd_shim/: mod.rs
src/drop_privs/: mod.rs
src/export/: dir.rs  mod.rs  raw.rs  tar.rs  tests.rs  vm.rs
src/import/: dir.rs  img.rs  mod.rs  registry.rs  tar.rs
src/isolate/: aarch64.rs  mod.rs  x86_64.rs
src/kube/: configmap.rs  create.rs  mod.rs  plan.rs  secret.rs  store.rs  types.rs
src/kube/probe/: http.rs
src/oci/: app.rs  cache.rs  layout.rs  mod.rs  registry.rs  rootfs.rs
src/systemd/: tests.rs  units.rs
test/: README.md  results.md  verify-matrix.sh  verify-oci.sh  verify-pods.sh  verify-security.sh
test/kube/: gitea-stack.yaml  secret-pod.yaml  wordpress-stack.yaml
test/scripts/: build-nixos-rootfs.sh  lib.sh  preflight.sh  run-parallel.sh  verify-build.sh  verify-export.sh  verify-gitea-pod.sh  verify-interrupt.sh  verify-kube-L1-basic.sh  verify-kube-L2-security.sh  verify-kube-L2-spec.sh  verify-kube-L3-secrets.sh  verify-kube-L3-volumes.sh  verify-kube-L4-networking.sh  verify-kube-L5-redis-stack.sh  verify-kube-L6-gitea-stack.sh  verify-kube-secrets.sh  verify-kube.sh  verify-matrix.sh  verify-nixos.sh  verify-oci.sh  verify-pods.sh  verify-security.sh  verify-usage.sh  verify-wordpress-pod.sh
test/scripts/nix/: build-rootfs.sh  container.nix
