[package]
name = "sdme"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "sdme"
path = "src/lib.rs"

[[bin]]
name = "sdme"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tar = { version = "0.4", features = ["xattr"] }
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
serde_json = "1"
ureq = "3"
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
zstd = "0.13"
ctrlc = "3"

[dev-dependencies]
sha2 = "0.10"
